--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
